# hume

./: .gitattributes  .gitignore  Animation.cpp  Animation.h  AnimationQueue.cpp  AnimationQueue.h  Animator.cpp  Animator.h  Application.cpp  Application.h  Audio.cpp  Audio.h  Blittable.cpp  Blittable.h  CMakeLists.txt  Doxyfile  Font.cpp  Font.h  FontManager.cpp  FontManager.h  Game.cpp  Game.h  GameState.cpp  GameState.h  Hume.h  Image.cpp  Image.h  Jenkinsfile  Logger.cpp  Logger.h  Makefile  MinGW_toolchain.cmake  Music.cpp  Music.h  README  README.md  Sound.cpp  Sound.h  Sprite.cpp  Sprite.h  (+18 more)
App/: Application.cpp  Application.h  CMakeLists.txt  State.cpp  State.h
Audio/: Audio.cpp  Audio.h  CMakeLists.txt  Music.cpp  Music.h  SDLMixerException.cpp  SDLMixerException.h  Sound.cpp  Sound.h
Core/: CMakeLists.txt  Component.cpp  Component.h  Log.cpp  Log.h  LogMode.h  Timer.cpp  Timer.h
GFX/: Blittable.cpp  Blittable.h  Font.cpp  Font.h  Graphics.cpp  Graphics.h  Image.cpp  Image.h  Properties.cpp  Properties.h  RenderMode.h  SDLTTFException.cpp  SDLTTFException.h  Text.cpp  Text.h  Window.cpp  Window.h  WindowSettings.cpp  WindowSettings.h
Hume.xcodeproj/: project.pbxproj
app/: Application.cpp  Application.h  CMakeLists.txt  State.cpp  State.h
audio/: Audio.cpp  Audio.h  CMakeLists.txt  Music.cpp  Music.h  SDLMixerException.h  Sound.cpp  Sound.h
core/: Application.cpp  Application.h  CMakeLists.txt  Component.cpp  Component.h  Log.cpp  Log.h  LogMode.h  State.cpp  State.h  StateManager.cpp  StateManager.h  Timer.cpp  Timer.h
gfx/: Blittable.cpp  Font.cpp  (+19 more)
(+48 files in other folders)
